chore: add all endpoints
